# starcraft-2-AI

./: .gitignore  .gitmodules  README.md  download-maps.sh
documentation/: A-Star.md  Flocking.md  InfluenceMaps.md
documentation/Test Results/: Results.txt
research/: Flocking.md
s2client-api/: .gitignore  CMakeLists.txt
s2client-api/examples/: rendered.cc  tutorial.cc
s2client-api/include/sc2api/: sc2_game_settings.h
s2client-api/maps/Project/: Pathfinder.SC2Map  PathfinderInfAndAstar.SC2Map  PathfinderV2.SC2Map  PathfinderV3.SC2Map
s2client-api/pathfinder/: CMakeLists.txt  project.cc
s2client-api/pathfinder/common/: InfluenceMap.cc  InfluenceMap.h  astar.cc  astar.h  common.cc  common.h  flocking.cc  flocking.h
s2client-api/pathfinder/inf_maps/: InfluenceMap.cpp  InfluenceMap.h  infMapTester  infMapTester.cpp  makefile
s2client-api/src/sc2api/: sc2_game_settings.cc
scripts/Simple-Agent/: run_simple_agent.sh  simple_agent.py
web/: a-star.haml  config.rb  flocking.haml  index.haml  influence-maps.haml  project-proposal.haml
web/docs/: AIGoreProjectProposal.html  AStar.html  Flocking.html  InfluenceMaps.html  OverviewPart1.html  OverviewPart2.html
web/partials/: external_resources.haml  head.haml  sidebar.haml
web/public/: a-star.html  flocking.html  index.html  influence-maps.html  project-proposal.html  style.css
web/sass/: style.scss
